# labs

./: README.md  add_data.py  fetch_hn.py  infer.py  pyproject.toml  urls.pkl
agi_house/: README.md  action.txt  agent.py  basic.py  main.py  prompts.py  pyproject.toml  together.py  tools.py
cookbook-generator/: .gitignore  README.md  config.py  develyn.py  fetch_github_pr.py  globals.py  langgraph.json  nodes.py  prompts.py  requirements.txt  retriever.py  state.py  toolhouse_tools.py  tools.py  utils.py
cozy-hack/: .env  README.md  config.py  develyn-cook.py  develyn.py  develyn_cook.py  generate.py  github_pr.py  load_data.py  main.py  new_guide.ipynb  new_guide.py  polling.py  prompt_learner_docs.txt  prompts.py  pyproject.toml  substrate_docs.json  substrate_docs_clean.txt  substrate_guides.json
db/: chroma.sqlite3
